--- a/server/WebRTC/remote-desktop/web/package.json
+++ b/server/WebRTC/remote-desktop/web/package.json
@@ -6,5 +6,8 @@
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^5.2.3",
     "lodash": ">=4.17.19"
+  },
+  "dependencies": {
+    "guacamole-common-js": "^1.3.0"
   }
 }
